tenants/la-bergeronnette/components/authentication/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-${tenant}
  namespace: controller-authentication
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.${domain}
    external-dns.alpha.kubernetes.io/target: ${domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${domain}`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: wildcard.${domain}.tls
